--- a/SelahSeries/Views/BlogMgt/Create.cshtml
+++ b/SelahSeries/Views/BlogMgt/Create.cshtml
@@ -69,7 +69,9 @@
     <div class="row">
         <div class="col-lg-1"></div>
         <div class=" col-lg-10">
-            <form enctype="multipart/form-data" asp-action="Create">
+            @using (Html.BeginForm("Create", "BlogMgt", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.AntiForgeryToken()
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
                 <div class="form-group">
@@ -128,9 +130,9 @@
                 <div style="text-align: center;" class="form-group">
                     <input type="submit" value="Create" class="btn btn-danger btn-lg" />
                 </div>
-            </form>
+            }
         </div>
-
+            
         <div class="col-lg-1"></div>
     </div>
 
