--- a/SelahSeries/Views/BlogMgt/Edit.cshtml
+++ b/SelahSeries/Views/BlogMgt/Edit.cshtml
@@ -64,7 +64,8 @@
 <div class="row">
     <div class="col-lg-1"></div>
     <div class="col-lg-10">
-        <form asp-action="Edit">
+        @using (Html.BeginForm("Edit", "BlogMgt", FormMethod.Post, new { enctype = "multipart/form-data" }))
+        {
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <input type="hidden" asp-for="PostId" />
             <span type="hidden" asp-validation-for="ParentId" class="text-danger"></span>
@@ -122,10 +123,10 @@
                 </div>
 
             </div>
-            <div style="text-align: center;"class="form-group">
+            <div style="text-align: center;" class="form-group">
                 <input type="submit" value="Save Changes" class="btn btn-danger btn-lg" />
             </div>
-        </form>
+        }
     </div>
     <div class="col-lg-1"></div>
 </div>
