--- a/SelahSeries/Views/BlogMgt/Details.cshtml
+++ b/SelahSeries/Views/BlogMgt/Details.cshtml
@@ -27,7 +27,7 @@
 <div class="container">
 
     <div class="home">
-        <div class="home_background parallax-window" data-parallax="scroll" style="background-image:url(/NewFolder2/images/post.jpg)" data-speed="0.8"></div>
+        <div class="home_background parallax-window" data-parallax="scroll" style="background-image:url(/Uploads/@(Model.TitleImageUrl)" data-speed="0.8"></div>
         <div class="home_content">
             <div class="post_category trans_200"><a href="category.html" class="trans_200">Relationship</a></div>
             <div class="post_title">@Html.DisplayFor(model => model.Title)</div>
