--- a/SelahSeries/Views/BlogMgt/Index.cshtml
+++ b/SelahSeries/Views/BlogMgt/Index.cshtml
@@ -16,14 +16,19 @@
 <p>
     <a class="btn btn-primary btn-lg" asp-action="Create">Create New Blog Post</a>
 </p>
-<table class="table table-striped">
+<table class="table table-striped table-responsive">
     <thead>
         <tr>
+            <th></th>
             <th>
                 @Html.DisplayNameFor(model => model.Author)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Title)
+            </th>
+            <th>
+
+                @Html.DisplayNameFor(model => model.CategoryId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Content)
@@ -40,49 +45,66 @@
             <th>
                 @Html.DisplayNameFor(model => model.ModifiedAt)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.CategoryId)
-            </th>
-            <th></th>
+
         </tr>
     </thead>
     <tbody>
         @foreach (var item in Model)
         {
-            <tr>
+        <tr>
+            <td>
+                <div class="btn-group">
+                    <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.PostId">Edit</a>
+                    <a class="btn btn-info" asp-action="Details" asp-route-id="@item.PostId">Details</a>
+                    <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.PostId">Delete</a>
+                </div>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Author)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Title)
+            </td>
+            @if (item.CategoryId == 1)
+            {
+                <td>Sports</td>
+            }
+            else if (item.CategoryId == 2)
+            {
+                <td>
+                    Relationship and Marriag
+                </td>
+            }
+            else if (item.CategoryId == 3)
+            {
+                <td>Career</td>
+            }
+            else if (item.CategoryId == 4)
+            {
+                <td>Politics</td>
+            }
+            else
+            {
+                <td>Unknown</td>
+            }
+            <td data-StripTag>
+                @Html.DisplayFor(modelItem => item.Content) <span>...</span>
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.TitleImageUrl)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Published)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreatedAt)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.ModifiedAt)
+            </td>
 
-                <td>
-                    @Html.DisplayFor(modelItem => item.Author)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Title)
-                </td>
-                <td data-StripTag>
-                    @Html.DisplayFor(modelItem => item.Content) <span>...</span>
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.TitleImageUrl)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Published)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CreatedAt)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.ModifiedAt)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.CategoryId)
-                </td>
-                <td>
-                    <div class="btn-group">
-                        <a class="btn btn-warning" asp-action="Edit" asp-route-id="@item.PostId">Edit</a>
-                        <a class="btn btn-info" asp-action="Details" asp-route-id="@item.PostId">Details</a>
-                        <a class="btn btn-danger" asp-action="Delete" asp-route-id="@item.PostId">Delete</a>
-                    </div>
-                </td>
-            </tr>
+         
+        </tr>
         }
     </tbody>
 </table>
