--- a/SelahSeries/wwwroot/NewFolder2/ministers/style.css
+++ b/SelahSeries/wwwroot/NewFolder2/ministers/style.css
@@ -3,7 +3,6 @@
 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 
 #team {
-    background: #d6d6d6 !important;
 }
 
 .btn-primary:hover,
@@ -21,6 +20,12 @@
 }
 
 section {
+    background: url("../background/supportlinks.jpg");
+    height: 100%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-attachment:local;
     padding: 60px 0;
 }
 
