--- a/SelahSeries/Views/Blog/category.cshtml
+++ b/SelahSeries/Views/Blog/category.cshtml
@@ -1,7 +1,18 @@
-﻿@{
-    ViewData["Title"] = "Politics";
+﻿@model IEnumerable<SelahSeries.Models.Post>
+@{
+    ViewData["Title"] = "Category";
+    List<Post> latestArticles = new List<Post>();
+    for (int i = Model.Count(); i > Math.Max(0, Model.Count() - 6); --i)
+    {
+        foreach (var item in Model)
+        {
+            if (item.PostId == i)
+            {
+                latestArticles.Add(item);
+            }
+        }
+    }
 }
-
 <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/category.css">
 <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/category_responsive.css">
 <link rel="stylesheet" type="text/css" href="~/NewFolder2/styles/main_styles.css">
@@ -18,11 +29,11 @@
 
 <div class="site-blocks-cover inner-page-cover overlay" style="background-image: url(/NewFolder2/new/freestocks-ChaY8166imQ-unsplash.jpg); margin-top:20px" data-aos="fade" data-stellar-background-ratio="0.5" data-aos="fade">
     <div class="container">
-        <div class="row align-items-center justify-content-center">
-            <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
-                <h2 class="mb-4" style="color: white ; font-family: 'Work Sans', sans-serif">Listen to your heart...</h2>
-            </div>
-        </div>
+        @*<div class="row align-items-center justify-content-center">
+                <div class="col-md-7 text-center" data-aos="fade-up" data-aos-delay="400">
+                    <h2 class="mb-4" style="color: white ; font-family: 'Work Sans', sans-serif">Listen to your heart...</h2>
+                </div>
+            </div>*@
     </div>
 </div>
 
@@ -42,7 +53,7 @@
 
                         <div class="section_panel d-flex flex-row align-items-center justify-content-start">
                             <div class="section_title">Don't Miss</div>
-                            <div class="section_tags ml-auto">
+                            @*<div class="section_tags ml-auto">
                                 <ul>
                                     <li class="active"><a href="category.html">all</a></li>
                                     <li>@Html.ActionLink("Relationship & Marriage", "Category", "Blog")</li>
@@ -50,7 +61,7 @@
                                     <li>@Html.ActionLink("Politics", "Category", "Blog")</li>
                                     <li>@Html.ActionLink("Career", "Category", "Blog")</li>
                                 </ul>
-                            </div>
+                            </div>*@
                             @*<div class="section_panel_more">
                                     <ul>
                                         <li>
@@ -70,6 +81,27 @@
 
                         <div class="section_content">
                             <div class="grid clearfix">
+                                @foreach (var item in latestArticles)
+                                {
+                                    <!-- Small Card With Image -->
+                                    <div class="card card_small_with_image grid-item">
+                                        <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
+                                        <div class="card-body">
+                                            <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
+                                            <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                                        </div>
+                                    </div>
+
+
+                                }
+                                <!-- Small Card With Image -->
+                                <div class="card card_small_with_image grid-item">
+                                    <img class="card-img-top" src="/NewFolder2/images/post_2.jpg" alt="https://unsplash.com/">
+                                    <div class="card-body">
+                                        <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most Complex Concepts in Physics?</a></div>
+                                        <small class="post_meta"><a href="#">Katy Liu</a><span>Sep 29, 2017 at 9:48 am</span></small>
+                                    </div>
+                                </div>
 
                                 <!-- Largest Card With Image -->
                                 <div class="card card_largest_with_image grid-item">
@@ -151,8 +183,21 @@
                         </div>
                         <div class="section_content">
                             <div class="grid clearfix">
+                                @foreach (var item in latestArticles)
+                                {
+                                    <!-- Small Card With Image -->
+                                    <div class="card card_small_with_image grid-item">
+                                        <img class="card-img-top" src='~/Uploads/@Html.DisplayFor(modelItem => item.TitleImageUrl)' alt="https://unsplash.com/">
+                                        <div class="card-body">
+                                            <div class="card-title card-title-small"><a href="~/blog/post/@Html.DisplayFor(modelItem => item.PostId)">@Html.DisplayFor(modelItem => item.Title)</a></div>
+                                            <small class="post_meta"><a href="#">@Html.DisplayFor(modelItem => item.Author)</a><span>@Html.DisplayFor(modelItem => item.ModifiedAt)</span></small>
+                                        </div>
+                                    </div>
 
-                                <!-- Small Card With Image -->
+
+                                }
+
+                                @*<!-- Small Card With Image -->
                                 <div class="card card_small_with_image grid-item">
                                     <img class="card-img-top" src="/NewFolder2/images/post_10.jpg" alt="">
                                     <div class="card-body">
@@ -244,7 +289,7 @@
                                     <div class="card-body">
                                         <div class="card-title card-title-small"><a href="~/blog/post">How Did van Gogh’s Turbulent Mind Depict One of the Most</a></div>
                                     </div>
-                                </div>
+                                </div>*@
                             </div>
 
                         </div>
@@ -290,6 +335,54 @@
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 											</svg>
                                     </div>
                                     <ul id="custom_dots" class="custom_dots custom_dots_vid">
@@ -301,6 +394,42 @@
                                         <svg version="1.1" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
                                              width="7px" height="12px" viewBox="0 0 7 12" enable-background="new 0 0 7 12" xml:space="preserve">
                                         <polyline fill="#bebebe" points="6.998,6.39 1.389,12 -0.002,12 -0.002,10.562 4.561,6 -0.002,1.438 -0.002,0 1.389,0 7,5.61 " />
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
