post clap: mad oo

--- a/SelahSeries/Views/BlogMgt/Index.cshtml
+++ b/SelahSeries/Views/BlogMgt/Index.cshtml
@@ -72,16 +72,16 @@
             else if (item.CategoryId == 2)
             {
                 <td>
-                    Relationship and Marriag
+                    Politics
                 </td>
             }
             else if (item.CategoryId == 3)
             {
-                <td>Career</td>
+                <td>Relationship and Marriage</td>
             }
             else if (item.CategoryId == 4)
             {
-                <td>Politics</td>
+                <td>Career</td>
             }
             else
             {
