--- a/SelahSeries/Views/Home/Index.cshtml
+++ b/SelahSeries/Views/Home/Index.cshtml
@@ -40,8 +40,9 @@
         <div class="carousel-item active" style="background-image: url('/NewFolder2/new/brooke-cagle-kvKSL7B6eTo-unsplash.jpg')">
 
             <div class="carousel-caption text-block d-md-block">
-                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif">Welcome to Selah Series</h3>
-                <p><a href="#blog" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
+                <h3 class="mb-4" style="color: #f2ba16 ;     font-size: 0.8em;
+    letter-spacing: 0.03em; font-family: 'Work Sans', sans-serif">Welcome to Selah Series</h3>
+                <p><a href="#blog" style=" letter-spacing: 0.02em;" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
 
             </div>
 
@@ -49,31 +50,34 @@
         </div>
 
 
-        <div class="carousel-item" style="background-image: url('/NewFolder2/new/green-tree-on-grass-field-during-daytime-53435.jpg')">
+        <div class="carousel-item" style="background-image: url('/NewFolder2/new/bigtree.jpg')">
             <div class="carousel-caption text-block d-md-block">
-                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif">Selah...A place of Growth</h3>
+                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif;     font-size: 0.8em;
+    letter-spacing: 0.03em;"> Grow With Selah</h3>
 
 
-                <p><a href="#blog" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
+                <p><a href="#blog" style=" letter-spacing: 0.02em;" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
             </div>
 
         </div>
         <!-- Slide Two - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('/NewFolder2/new/hian-oliveira-7-gtkXm2b5U-unsplash (1).jpg')">
             <div class="carousel-caption text-block d-md-block">
-                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif">Home of counsel and support</h3>
+                <h3 class="mb-4" style="color: #f2ba16 ;     font-size: 0.8em;
+    letter-spacing: 0.03em; font-family: 'Work Sans', sans-serif">Home of counsel and support</h3>
 
 
-                <p><a href="#blog" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
+                <p><a href="#blog" style=" letter-spacing: 0.02em;" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
             </div>
 
         </div>
         <!-- Slide Three - Set the background image for this slide in the line below -->
         <div class="carousel-item" style="background-image: url('/NewFolder2/new/emilio-garcia-AWdCgDDedH0-unsplash.jpg')">
             <div class="carousel-caption text-block d-md-block">
-                <h3 class="mb-4" style="color: #f2ba16 ; font-family: 'Work Sans', sans-serif">Get updates on sports and politics</h3>
+                <h3 class="mb-4" style="color: #f2ba16 ;     font-size: 0.8em;
+    letter-spacing: 0.03em; font-family: 'Work Sans', sans-serif;">Get updates on sports and politics</h3>
 
-                <p><a href="#blog" class="btn btn-primary px-4 py-2">Visit Blog</a></p>
+                <p><a href="#blog" style=" letter-spacing: 0.02em;"  class="btn btn-primary">Visit Blog</a></p>
             </div>
 
         </div>
