--- a/SelahSeries/Views/Support/Index.cshtml
+++ b/SelahSeries/Views/Support/Index.cshtml
@@ -31,7 +31,7 @@
 <div>
     <!-- Team -->
     <section id="team" class="pb-5 containee">
-        <div class="container site overlay" style="background-image: url('/NewFolder2/new/shallow-focus-photography-of-white-flowers-1369280.jpg')">
+        <div class="container site overlay" >
             @*<h5 class="section-title h2">Our Support Links</h5>*@
             <div class="row ministers">
                 <!-- Team member -->
